--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Hello World<title>
+
+</head>
+<body>
+  <h1>Hello World</h1>
+</body>
+</html>
