--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+SC|Kosugi+Maru|Sigmar+One|ZCOOL+KuaiLe|Architects+Daughter|Ubuntu|Merriweather|Noto+Serif:400,600|Noto+Serif+SC:400,600|Roboto:400,700">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
-  <link rel="stylesheet" href="/css/about.css">
+  <link rel="stylesheet" href="css/about.css">
   <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
   <title>Curriculum Vitae</title><link rel="shortcut icon" href="/favicon.ico">
 </head>
@@ -33,7 +33,7 @@
 <main class="container">
   <section class="namecard">
     <div class="avatar">
-      <img src="/img/head.jpg">
+      <img src="img/head.jpg">
     </div>
 
     <div class="information">
@@ -45,7 +45,7 @@
         Shanghai Jiao Tong University
       </p>
       <p>
-        I am a senior undergraduate majoring in computer science at <a href="http://en.sjtu.edu.cn" target="_blank" rel="noopener">Shanghai Jiao Tong University</a> (SJTU).
+        I am a senior undergraduate majoring in computer science at <a href="http://en.sjtu.edu.cn" target="_blank" rel="noopener">Shanghai Jiao Tong University</a>.
         I am a member of <a href="https://acm.sjtu.edu.cn/home" target="_blank" rel="noopener"> ACM Honors Class </a>, which is an elite CS program for top 5% talented students at SJTU.
       </p>
 
@@ -58,13 +58,10 @@
       </p>
 
       <p>
-          My research interests include efficient deep learning, deep learning system and reinforcement learning.
+          My research interests lie in the general area of systems for machine learning.
+			I am planning to apply for CS Ph.D. programs that start in Fall 2020.
       </p>
 
-
-      <p>
-        I am planning to apply for CS Ph.D. programs that start in Fall 2020.
-      </p>
 
       <p></p>
 
@@ -72,29 +69,31 @@
   </section>
   <section class="publication">
     <h2>Publications</h2>
-    <!---
+
     <div class="item">
       <div class="avatar">
-        <img src="/img/dos.png">
+        <img src="img/ios.png">
       </div>
       <div class="information">
         <div>
-          <span class="title"> Accelerate DNN Inference by Inter-Opreator Parallelism </span>
+          <span class="title"> IOS: Inter-Operator Scheduler for CNN Acceleration </span>
           <span class="year">2019</span>
         </div>
         <div class="author">
           <strong>Yaoyao Ding</strong>, Ligeng Zhu, Zhihao Jia, Song Han
         </div>
         <div>
-          <span class="red">Submitted to ICLR 2020</span>
+          <span class="red">Submitted to DAC 2020</span>
+		  <!--
           <span></span> [<a href="https://openreview.net/pdf?id=HJezqlrKvr" target="_blank" rel="noopener">Open Review</a>]
+		  -->
         </div>
       </div>
     </div>
-    --->
+	
     <div class="item">
       <div class="avatar">
-        <img src="/img/cityflow.png">
+        <img src="img/cityflow.png">
       </div>
       <div class="information">
         <div>
@@ -127,6 +126,7 @@
       <li class="item"><span class="title">CCPC Hefei Regional Contest (<strong>Gold Medal</strong> <strong>Top 12%</strong> over 150 teams)</span><span class="year">2016</span></li>
     </ul>
   </section>
+  <section class=
 </main>
 </body>
 </html>
