--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </p>
 
       <p>
-        Now, I am a research assistant at <a href="https://hanlab.mit.edu/" target="_blank" rel="noopener">HANLab</a> in MIT, supervised by <a href="http://songhan.mit.edu/" target="_blank" rel="noopener">Prof. Song Han</a>.
+        I was a research assistant at <a href="https://hanlab.mit.edu/" target="_blank" rel="noopener">HANLab</a> in MIT, supervised by <a href="http://songhan.mit.edu/" target="_blank" rel="noopener">Prof. Song Han</a>.
 
         Previously, I was a research assistant at <a href="http://apex.sjtu.edu.cn/" target="_blank" rel="noopener"> APEX Lab </a> of SJTU, advised by
           <a href="http://apex.sjtu.edu.cn/members/yyu" target="_blank" rel="noopener"> Prof. Yong Yu </a>
