--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         Shanghai Jiao Tong University
       </p>
       <p>
+	      [The webpage is under construction]
+      </p>
+      <p>
         I am a senior undergraduate majoring in computer science at <a href="http://en.sjtu.edu.cn" target="_blank" rel="noopener">Shanghai Jiao Tong University</a>.
         I am a member of <a href="https://acm.sjtu.edu.cn/home" target="_blank" rel="noopener"> ACM Honors Class </a>, which is an elite CS program for top 5% talented students at SJTU.
       </p>
