--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
   -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+SC|Kosugi+Maru|Sigmar+One|ZCOOL+KuaiLe|Architects+Daughter|Ubuntu|Merriweather|Noto+Serif:400,600|Noto+Serif+SC:400,600|Roboto:400,700">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/about.css">
   <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
-  <title>Curriculum Vitae</title><link rel="shortcut icon" href="/favicon.ico">
+  <title>Yaoyao Ding</title><link rel="shortcut icon" href="/favicon.ico">
 </head>
 
 <body>
@@ -40,80 +41,98 @@
       <h2>Yaoyao Ding</h2>
       <p></p>
       <p>
-        Undergraduate Majoring in Computer Science <br>
-        Zhiyuan College <br>
-        Shanghai Jiao Tong University
+        <!--        Master student<br>-->
+        Electrical and Computer Engineering, University of Toronto <br>
+        yaoyao.ding [AT] mail.utoronto.ca <br>
+        <a href="https://github.com/yaoyaoding" target="_blank" data-toggle="popover" tabindex="2" data-trigger="hover" data-content="GitHub" data-original-title="" title=""><span
+                class="fa fa-github"> GitHub</span></a>
       </p>
       <p>
-        I am a senior undergraduate majoring in computer science at <a href="http://en.sjtu.edu.cn" target="_blank" rel="noopener">Shanghai Jiao Tong University</a>.
-        I am a member of <a href="https://acm.sjtu.edu.cn/home" target="_blank" rel="noopener"> ACM Honors Class </a>, which is an elite CS program for top 5% talented students at SJTU.
+        I am currently a master student at <a href="https://www.utoronto.ca/">University of Toronto</a>, supervised by Professor <a href="http://www.cs.toronto.edu/~pekhimenko/">Gennady Pekhimenko</a>.
+        Before coming to UofT, I received my bachelor degree in Computer Science from the <a href="http://apex.sjtu.edu.cn/members/yyu">ACM Honors Class</a> supervised by <a href="https://acm.sjtu.edu.cn/home">Yong Yu</a> at <a href="http://en.sjtu.edu.cn"> Shanghai Jiao Tong University</a>.
       </p>
-
       <p>
-        I was a research assistant at <a href="https://hanlab.mit.edu/" target="_blank" rel="noopener">HANLab</a> in MIT, supervised by <a href="http://songhan.mit.edu/" target="_blank" rel="noopener">Prof. Song Han</a>.
-
-        Previously, I was a research assistant at <a href="http://apex.sjtu.edu.cn/" target="_blank" rel="noopener"> APEX Lab </a> of SJTU, advised by
-          <a href="http://apex.sjtu.edu.cn/members/yyu" target="_blank" rel="noopener"> Prof. Yong Yu </a>
-        and <a href="http://wnzhang.net/" target="_blank" rel="noopener"> Prof. Weinan Zhang </a> .
+        My research interests lie in the general area of systems for machine learning. Currently, I am focusing on the optimization for neural network training and inference.
       </p>
-
-      <p>
-          My research interests lie in the general area of systems for machine learning.
-			I am planning to apply for CS Ph.D. programs that start in Fall 2020.
-      </p>
-
-
-      <p></p>
-
     </div>
   </section>
   <section class="publication">
-    <h2>Publications</h2>
-
-    <div class="item">
-      <div class="avatar">
-        <img src="img/ios.png">
-      </div>
-      <div class="information">
-        <div>
-          <span class="title"> IOS: Inter-Operator Scheduler for CNN Acceleration </span>
-          <span class="year">2019</span>
+    <h2>Publications and Manuscripts</h2>
+    <ul>
+      <li class="item">
+        <div class="information">
+          <div>
+            <span class="title"> IOS: Inter-Operator Scheduler for CNN Acceleration </span>
+          </div>
+          <div class="author">
+            <strong>Yaoyao Ding</strong>, Ligeng Zhu, Zhihao Jia, Gennady Pekhimenko, Song Han
+          </div>
+          <div>
+            <span></span> [<a href="https://arxiv.org/abs/2011.01302">Arxiv</a>]
+            <span></span> [<a href="https://github.com/mit-han-lab/inter-operator-scheduler">GitHub</a>]
+          </div>
         </div>
-        <div class="author">
-          <strong>Yaoyao Ding</strong>, Ligeng Zhu, Zhihao Jia, Song Han
-        </div>
-        <div>
-          <span class="red">Submitted to DAC 2020</span>
-		  <!--
-          <span></span> [<a href="https://openreview.net/pdf?id=HJezqlrKvr" target="_blank" rel="noopener">Open Review</a>]
-		  -->
-        </div>
-      </div>
-    </div>
-	
-    <div class="item">
-      <div class="avatar">
-        <img src="img/cityflow.png">
-      </div>
-      <div class="information">
-        <div>
+      </li>
+      <li class="item">
+        <div class="information">
+          <div>
           <span class="title">
-            CityFlow: A Multi-Agent Reinforcement Learning Environment for Large Scale City Traffic Scenario </span>
-          <span class="year">2019</span>
+              GAN Compression: Learning Efficient Architectures for Conditional GAN
+          </span>
+          </div>
+          <div class="author">
+            Muyang Li, Ji Lin, <strong>Yaoyao Ding</strong>, Zhijian Liu, Junyan Zhu, Song Han
+          </div>
+          <div>
+              CVPR'20
+            <span></span>[<a href="https://arxiv.org/abs/2003.08936" target="_blank" rel="noopener">ArXiv</a>]
+<!--            <span></span> [<a href="" target="_blank" rel="noopener">GitHub</a>]-->
+          </div>
         </div>
-        <div class="author">
-          Huichu Zhang, Siyuan Feng, Chang Liu,
-          <strong>Yaoyao Ding</strong>,
-          Yichen Zhu, Zihan Zhou, Weinan Zhang, Yong Yu, Haiming Jin, Zhenhui Li
+      </li>
+      <li class="item">
+        <div class="information">
+          <div>
+          <span class="title">
+            CityFlow: A Multi-Agent Reinforcement Learning Environment for Large Scale City Traffic Scenario
+          </span>
+          </div>
+          <div class="author">
+            Huichu Zhang, Siyuan Feng, Chang Liu,
+            <strong>Yaoyao Ding</strong>,
+            Yichen Zhu, Zihan Zhou, Weinan Zhang, Yong Yu, Haiming Jin, Zhenhui Li
+          </div>
+          <div>
+            WWW'19 Demo
+            <span></span>[<a href="https://arxiv.org/abs/1905.05217" target="_blank" rel="noopener">ArXiv</a>]
+            <span></span> [<a href="https://github.com/cityflow-project/CityFlow" target="_blank" rel="noopener">GitHub</a>]
+          </div>
         </div>
-        <div>
-          <span class="red">WWW 2019 Demo</span>
-          <span></span>[<a href="https://arxiv.org/abs/1905.05217" target="_blank" rel="noopener">ArXiv</a>]
-          <span></span> [<a href="https://github.com/cityflow-project/CityFlow" target="_blank" rel="noopener">GitHub</a>]
-        </div>
-      </div>
-    </div>
+      </li>
+    </ul>
   </section>
+
+  <section class="experience">
+    <h2>Experiences</h2>
+    <ul>
+      <li class="item">
+        <span class="title"><a href="http://www.cs.toronto.edu/ecosystem/">EcoSystem Lab</a>, University of Toronto.</span>
+        <span class="year">2020.09 - Present</span>
+        <div> Research Assistant, supervised by Prof. Gennady Pekhimenko. </div>
+      </li>
+      <li class="item">
+        <span class="title"><a href="https://hanlab.mit.edu/">HAN Lab</a>, Massachusetts Institute of Technology.</span>
+        <span class="year">2019.07 - 2019.12</span>
+        <div> Research Assistant, supervised by Prof. Song Han. </div>
+      </li>
+      <li class="item">
+        <span class="title"><a href="http://apex.sjtu.edu.cn/">Apex Lab</a>, Shanghai Jiao Tong University.</span>
+        <span class="year">2018.09 - 2019.06</span>
+        <div> Research Assistant, supervised by Prof. Yong Yu and Prof. Weinan Zhang. </div>
+      </li>
+    </ul>
+  </section>
+
   <section class="award">
     <h2>Awards</h2>
     <ul>
@@ -126,7 +145,6 @@
       <li class="item"><span class="title">CCPC Hefei Regional Contest (<strong>Gold Medal</strong> <strong>Top 12%</strong> over 150 teams)</span><span class="year">2016</span></li>
     </ul>
   </section>
-  <section class=
 </main>
 </body>
 </html>
