--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
       <p>
         <!--        Master student<br>-->
         Electrical and Computer Engineering, University of Toronto <br>
-        yaoyao.ding [AT] mail.utoronto.ca <br>
-        <a href="https://github.com/yaoyaoding" target="_blank" data-toggle="popover" tabindex="2" data-trigger="hover" data-content="GitHub" data-original-title="" title=""><span
-                class="fa fa-github"> GitHub</span></a>
+<!--        <a href="mailto:yaoyao.ding@mail.utoronto.ca">yaoyao.ding@mail.utoronto.ca</a>-->
+        <a class="fa fa-envelope" href="mailto:yaoyao.ding@mail.utoronto.ca" target="_blank" data-toggle="popover" data-trigger="hover" data-content="email me" data-original-title="" title=""></a>
+          yaoyao.ding@mail.utoronto.ca <br>
+        <a class="fa fa-github" href="https://github.com/yaoyaoding" target="_blank" data-toggle="popover" data-trigger="hover" data-content="GitHub" data-original-title="" title="">
+          GitHub
+        </a>
       </p>
       <p>
         I am currently a master student at <a href="https://www.utoronto.ca/">University of Toronto</a>, supervised by Professor <a href="http://www.cs.toronto.edu/~pekhimenko/">Gennady Pekhimenko</a>.
@@ -136,13 +139,14 @@
   <section class="award">
     <h2>Awards</h2>
     <ul>
-      <li class="item"><span class="title">Liao Kaiyuan Scholarship (<strong>Top 0.2%</strong> in SJTU)</span><span class="year">2019</span></li>
-      <li class="item"><span class="title">Rong Chang Innovation Scholarship Finalist (<strong>Top 0.03%</strong> in SJTU)</span><span class="year">2018</span></li>
-      <li class="item"><span class="title">Zhiyaun Honors Scholarship (<strong>Top 5%</strong> in SJTU)</span><span class="year">2017 &amp; 2018</span></li>
-      <li class="item"><span class="title">ACM-ICPC Qingdao Asia Regional Contest (<strong>Gold Medal</strong> <strong>Top 2%</strong> over 300 teams)</span><span class="year">2017</span></li>
-      <li class="item"><span class="title">ACM-ICPC Jakarta Asia Regional Contest (<strong>4th Place</strong> over 80 teams)</span><span class="year">2017</span></li>
-      <li class="item"><span class="title">CCPC Harbin Regional Contest (<strong>Gold Medal</strong> <strong>Top 6%</strong> over 180 teams)</span><span class="year">2017</span></li>
-      <li class="item"><span class="title">CCPC Hefei Regional Contest (<strong>Gold Medal</strong> <strong>Top 12%</strong> over 150 teams)</span><span class="year">2016</span></li>
+      <li class="item"><span class="title">Zhiyuan Honor Degree of Bachelor in Computer Science and Technology</span><span class="year">2020</span></li>
+      <li class="item"><span class="title">Liao Kaiyuan Scholarship (Top 0.2% in SJTU)</span><span class="year">2019</span></li>
+      <li class="item"><span class="title">Rong Chang Innovation Scholarship Finalist (Top 0.03% in SJTU)</span><span class="year">2018</span></li>
+      <li class="item"><span class="title">Zhiyaun Honors Scholarship (Top 5% in SJTU)</span><span class="year">2017 &amp; 2018</span></li>
+      <li class="item"><span class="title">ACM-ICPC Qingdao Asia Regional Contest (Gold Medal Top 2% over 300 teams)</span><span class="year">2017</span></li>
+      <li class="item"><span class="title">ACM-ICPC Jakarta Asia Regional Contest (4th Place over 80 teams)</span><span class="year">2017</span></li>
+      <li class="item"><span class="title">CCPC Harbin Regional Contest (Gold Medal Top 6% over 180 teams)</span><span class="year">2017</span></li>
+      <li class="item"><span class="title">CCPC Hefei Regional Contest (Gold Medal Top 12% over 150 teams)</span><span class="year">2016</span></li>
     </ul>
   </section>
 </main>
