add small head img

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <main class="container">
   <section class="namecard">
     <div class="avatar">
-      <img src="img/head.jpg">
+      <img src="img/head_small.jpg">
     </div>
 
     <div class="information">
