--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </p>
       <p>
         I am currently a master student at <a href="https://www.utoronto.ca/">University of Toronto</a>, supervised by Professor <a href="http://www.cs.toronto.edu/~pekhimenko/">Gennady Pekhimenko</a>.
-        Before coming to UofT, I received my bachelor degree in Computer Science from the <a href="http://apex.sjtu.edu.cn/members/yyu">ACM Honors Class</a> supervised by <a href="https://acm.sjtu.edu.cn/home">Yong Yu</a> at <a href="http://en.sjtu.edu.cn"> Shanghai Jiao Tong University</a>.
+        Before coming to UofT, I received my bachelor degree in Computer Science from the <a href="https://acm.sjtu.edu.cn/home">ACM Honors Class</a> supervised by <a href="http://apex.sjtu.edu.cn/members/yyu">Yong Yu</a> at <a href="http://en.sjtu.edu.cn"> Shanghai Jiao Tong University</a>.
       </p>
       <p>
         My research interests lie in the general area of systems for machine learning. Currently, I am focusing on the optimization for neural network training and inference.
