change theme color to blue; add website for IOS

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         Electrical and Computer Engineering, University of Toronto <br>
 <!--        <a href="mailto:yaoyao.ding@mail.utoronto.ca">yaoyao.ding@mail.utoronto.ca</a>-->
         <a class="fa fa-envelope" href="mailto:yaoyao.ding@mail.utoronto.ca" target="_blank" data-toggle="popover" data-trigger="hover" data-content="email me" data-original-title="" title=""></a>
-          yaoyao.ding@mail.utoronto.ca <br>
+          yaoyao.ding [AT] mail.utoronto.ca <br>
         <a class="fa fa-github" href="https://github.com/yaoyaoding" target="_blank" data-toggle="popover" data-trigger="hover" data-content="GitHub" data-original-title="" title="">
           GitHub
         </a>
